--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
 @import url('https://fonts.cdnfonts.com/css/gilroy-bold');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap');
+
 :root {
     --main-color: lavender;
     --font-color:#000;
@@ -12,9 +13,11 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
     text-decoration: none;
     outline: none;
+    font-family: raleway;
+    font-weight: 800;
+
 }
 
 /* Smooth scroll */
@@ -23,11 +26,12 @@ html,body {
     height: 100%;
     scroll-behavior: smooth;
 }
-
+/* 
 ::-webkit-scrollbar{
     display: none;
-}
+} */
 #home{
+    position: relative;
     overflow-x: hidden;
 }
 .container{
@@ -519,7 +523,7 @@ svg img{
 .lang_inner {
     position: relative;
     height: 100%;
-    transform-style: preserve-3d;
+    transform-style: preserve-3d;   
     transition: transform 0.5s;
 }
 
@@ -679,6 +683,8 @@ svg img{
     right: 10%;
 
 }
+
+/* ================================================= */
 
 /* Contact Me Section */
 
